--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "One District One Product",
+  "name": "one-district-one-product",
   "version": "1.0.0",
   "description": "A E-commerce website.",
   "main": "app.js",
